--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -4,17 +4,15 @@ services:
       context: ..
       dockerfile: deploy/Dockerfile
       args:
-        VITE_PORT: ${PORT-4173}
         VITE_DEPLOYMENT_MODE: ${DEPLOYMENT_MODE-production}
     image: workout-app:latest
     restart: unless-stopped
     environment:
-      - PORT=${PORT-4173}
       - DEPLOYMENT_MODE=${DEPLOYMENT_MODE-production}
     ports:
-      - "${PORT-4173}:${PORT-4173}"
+      - "4173:4173"
     healthcheck:
-      test: ["CMD-SHELL", "wget --spider -q http://localhost:${PORT-4173}/health || exit 1"]
+      test: ["CMD-SHELL", "wget --spider -q http://localhost:4173/health || exit 1"]
       interval: 30s
       timeout: 5s
       retries: 3
