--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     ports:
       - "4173:4173"
     healthcheck:
-      test: ["CMD-SHELL", "wget --spider -q http://localhost:4173/health || exit 1"]
+      test: ["CMD-SHELL", "curl -fsSL http://localhost:4173/ -o /dev/null || exit 1"]
       interval: 30s
       timeout: 5s
       retries: 3
